Fix slider left gap by resetting margin-left

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -223,6 +223,11 @@ slider-component.slider-component-full-width {
     scroll-margin-left: var(--desktop-margin-left-first-item);
   }
 
+  .page-width-desktop .slider--desktop .slider__slide:first-child {
+    margin-left: 0;
+    scroll-margin-left: 0;
+  }
+
   .slider-component-full-width .slider--desktop {
     scroll-padding-left: 1.5rem;
   }
